minor fixes 1. set background color upwards scroll on desktop firefox browser by setting background-color of `<html>` tag 2. fixed flex-wrap not increasing height of container on wrap by rebuilding with css-grid 3. added radius to highlighting

--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,8 @@
     src: url('./assets/fonts/Ubuntu/Ubuntu-BoldItalic.ttf')
 }
 
-* {
-    font-family: 'Ubuntu',monospace;
-    scroll-behavior: smooth
+html {
+    background-color: #F9FAFB;
+    scroll-behavior: smooth;
+    font-family: 'Ubuntu', monospace;
 }
